# FastApi

./: emails.py  main.py  pyproject.toml  todo.db
user/: crud.py  database.py  hashing.py  models.py  oauth2.py  schemas.py
user/routers/: authentication.py  user.py
